2009-05-18  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_upnp_dms_condir_getsystemupdateid() and cg_upnp_dms_condir_setsystemupdateid().

2009-04-20  Satoshi Konno <skonno@cybergarage.org>
	* Added CGUpnpAvItem:isMovieClass(), isVideoClass(), isAudioClass() and isImageClass().

2009-04-15  Satoshi Konno <skonno@cybergarage.org>
	* Added CGUpnpAvServer:browseMetadata(), browseDirectChildren().

2009-01-29  Satoshi Konno <skonno@cybergarage.org>
	* Added CGUpnpAvResource:isImage(), isMovie() and is Audio().
	* Added CGUpnpAvResource:hasImageResource(), hasMovieResource() and is hasAudioResource().
	* Added CGUpnpAvResource:imageResource(), movieResource() and is audioResource().
	
2008-12-04  Satoshi Konno <skonno@cybergarage.org>
	* Fixed CGUpnpAvServer::browse() to set the RequestedCount parameter correctly when the specified parameter is zero and the NumberReturned parameter is less than the TotalMaches parameter for XMBC.
	* Addded the following methods
	  CGUpnpAvResource::isSmallImage
	  CGUpnpAvResource::isMediumImage
	  CGUpnpAvResource::isLargeImage
	  CGUpnpAvItem::smallImageResource;
	  CGUpnpAvItem::mediumImageResource;
	  CGUpnpAvItem::largeImageResource;
	  CGUpnpAvItem::lowestImageResource;
	  CGUpnpAvItem::smallImageUrl;
	  CGUpnpAvItem::mediumImageUrl;
	  CGUpnpAvItem::largeImageUrl;
	  CGUpnpAvItem::lowestImageUrl;
	  
2008-10-31  Satoshi Konno <skonno@cybergarage.org>
	* v2.3
	* Added UPnP/AV package in std/av of CyberLink for C as a sample implementation.
	* Added the following classes of Objective-C for MacOSX and iPhone
	  CGUpnpAvContainer
	  CGUpnpAvContentDirectory
	  CGUpnpAvContentManager
	  CGUpnpAvController
	  CGUpnpAvItem
	  CGUpnpAvObject
	  CGUpnpAvRenderer
	  CGUpnpAvResource
	  CGUpnpAvRoot
	  CGUpnpAvServer

2007-05-26 Satoshi Konno <skonno@cybergarage.org>
	* v1.2
	* Added installer projects for the WIN32 samples.

2007-05-08 Satoshi Konno <skonno@cybergarage.org>
	* Added the following functions to set attributes of DLNA.